First Commit, adding all of APOD mini project

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Quartet APOD Exercise</title>
+    <title>Gimmie Space.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono|Open+Sans" rel="stylesheet">
   </head>
-  <body>
+  <body style="margin:0; background:url(https://apod.nasa.gov/apod/image/1607/NGC1309Jeff_full.jpg) no-repeat center center fixed; background-size:cover;">
     <div id="app"></div>
   </body>
 </html>
